# se_models

./: .env  .gitignore  README.md  docker-compose.ros2.yml  docker-compose.yml  download_weights.sh  pyproject.toml  setup.py
_test/: requirements.txt  test_dinov3.py  test_grounding_dino.py  test_ros_dinov3.py  test_ros_grounding_dino.py  test_ros_sam2.py  test_sam2.py
grounding_dino/: Dockerfile  api.py  build.sh  run.sh
grounding_dino/ros2_ws/src/grounding_dino_interfaces/: CMakeLists.txt  package.xml
grounding_dino/ros2_ws/src/grounding_dino_ros/: package.xml  setup.cfg  setup.py
models/dinov3/: Dockerfile  api.py  download_weights.sh
models/grounding_dino/: Dockerfile  api.py  build.sh  download_weights.sh  run.sh
models/sam2/: Dockerfile  api.py  build.sh  download_weights.sh  run.sh
ros2_interface/: Dockerfile  functions.sh
ros2_interface/src/se_models/: package.xml  setup.cfg  setup.py
ros2_interface/src/se_models/launch/: models.launch.py
ros2_interface/src/se_models/resource/: se_models
ros2_interface/src/se_models/se_models/: __init__.py  grounding_dino_node.py  sam2_node.py
ros2_interface/src/se_models/se_models_ros/: __init__.py  dinov3_node.py  grounding_dino_node.py  sam2_node.py
ros2_interface/src/se_models_msgs/: CMakeLists.txt  package.xml
ros2_interface/src/se_models_msgs/msg/: Segmentation.msg
ros2_interface/src/se_models_msgs/srv/: GetDetections.srv  GetEmbeddings.srv
sam2/: Dockerfile  api.py  build.sh  run.sh
sam2/ros2_ws/src/sam2_ros/: package.xml  setup.py
sam2/ros2_ws/src/sam2_ros/launch/: sam2.launch.py
sam2/ros2_ws/src/sam2_ros/sam2_ros/: node.py
se_models/: __init__.py  dinov3_client.py  grounding_dino_client.py  sam2_client.py
se_models/types/: __init__.py  dinov3.py  grounding_dino.py  sam2.py
src/: grounding_dino_client.py  sam2_client.py
(+6 files in other folders)
